    in the join condition.  [ticket:2149]

  - mapper() will ignore non-configured foreign keys
    to unrelated tables when determining inherit
    condition between parent and child class.
    This is equivalent to behavior already 
    applied to declarative.  Note that 0.7 has a 
    more comprehensive solution to this, altering
    how join() itself determines an FK error.
    [ticket:2153]

- sql
  - Fixed bug whereby if FetchedValue was passed
    to column server_onupdate, it would not
    have its parent "column" assigned, added
    test coverage for all column default assignment
    patterns.  [ticket:2147]

  - Fixed bug whereby nesting a label of a select()
    with another label in it would produce incorrect
    exported columns.   Among other things this would
    break an ORM column_property() mapping against
    another column_property().  [ticket:2167].

- mssql
  - Fixed bug in MSSQL dialect whereby the aliasing
    applied to a schema-qualified table would leak
    into enclosing select statements [ticket:2169].

0.6.7
=====
- orm
  - Tightened the iterate vs. remove mutex around the 
    identity map iteration, attempting to reduce the 
    chance of an (extremely rare) reentrant gc operation 
    causing a deadlock.  Might remove the mutex in
    0.7.  [ticket:2087]

  - Added a `name` argument to `Query.subquery()`, to allow
    a fixed name to be assigned to the alias object.
    [ticket:2030]

  - A warning is emitted when a joined-table inheriting mapper
    has no primary keys on the locally mapped table
    (but has pks on the superclass table).  [ticket:2019]

  - Fixed bug where "middle" class in a polymorphic hierarchy
    would have no 'polymorphic_on' column if it didn't also
    specify a 'polymorphic_identity', leading to strange
    errors upon refresh, wrong class loaded when querying
    from that target. Also emits the correct WHERE criterion
    when using single table inheritance. [ticket:2038]
